live-prop-test-macros/tests/compile_fail/not_fn.stderr
error: expected `fn`
 --> $DIR/not_fn.rs:4:1
  |
4 | struct NotAFunction;
  | ^^^^^^
